--- a/launch_meteo/meteo/meteo.ioc
+++ b/launch_meteo/meteo/meteo.ioc
@@ -51,18 +51,20 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
 Mcu.Pin1=PA2
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PA14
+Mcu.Pin11=PA15
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PA5
-Mcu.Pin3=PA7
-Mcu.Pin4=PA8
-Mcu.Pin5=PA9
-Mcu.Pin6=PA10
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PA15
-Mcu.PinsNb=13
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PB1
+Mcu.Pin6=PA8
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -108,6 +110,11 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=PinState,GPIO_Label
+PA6.GPIO_Label=LED
+PA6.Locked=true
+PA6.PinState=GPIO_PIN_SET
+PA6.Signal=GPIO_Output
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
@@ -118,6 +125,11 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=DISP_RESET
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=BTN
+PB1.GPIO_PuPd=GPIO_PULLUP
+PB1.Locked=true
+PB1.Signal=GPIO_Input
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
