--- a/launch_meteo/meteo/meteo.ioc
+++ b/launch_meteo/meteo/meteo.ioc
@@ -54,9 +54,10 @@ Mcu.Pin0=PF0 / OSC_IN
 Mcu.Pin1=PA2
 Mcu.Pin10=PA14
 Mcu.Pin11=PA15
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin12=PB3
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
@@ -65,7 +66,7 @@ Mcu.Pin6=PA8
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
 Mcu.Pin9=PA13
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -133,6 +134,10 @@ PB1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
 PB1.Signal=GPXTI1
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=LD3
+PB3.Locked=true
+PB3.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
