--- a/launch_meteo/meteo/meteo.ioc
+++ b/launch_meteo/meteo/meteo.ioc
@@ -48,8 +48,9 @@ Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM6
 Mcu.IP7=TIM7
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP8=TIM16
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
@@ -62,6 +63,7 @@ Mcu.Pin14=PB7
 Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin16=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin17=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
@@ -70,7 +72,7 @@ Mcu.Pin6=PA8
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
 Mcu.Pin9=PA13
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -218,6 +220,9 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM16.IPParameters=Prescaler,Period
+TIM16.Period=7999
+TIM16.Prescaler=999
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=5000
 TIM6.Prescaler=800-1
@@ -228,6 +233,8 @@ USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
