--- a/launch_meteo/meteo/meteo.ioc
+++ b/launch_meteo/meteo/meteo.ioc
@@ -147,8 +147,10 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LD3
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PF0\ /\ OSC_IN.GPIOParameters=GPIO_Label
