--- a/launch_meteo/meteo/meteo.ioc
+++ b/launch_meteo/meteo/meteo.ioc
@@ -55,24 +55,23 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
 Mcu.Pin1=PA2
-Mcu.Pin10=PA14
-Mcu.Pin11=PA15
-Mcu.Pin12=PB3
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin10=PA15
+Mcu.Pin11=PB3
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin2=PA5
-Mcu.Pin3=PA6
-Mcu.Pin4=PA7
-Mcu.Pin5=PB1
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=19
+Mcu.Pin3=PA7
+Mcu.Pin4=PB1
+Mcu.Pin5=PA8
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -122,11 +121,6 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=PinState,GPIO_Label
-PA6.GPIO_Label=LED
-PA6.Locked=true
-PA6.PinState=GPIO_PIN_SET
-PA6.Signal=GPIO_Output
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
@@ -147,9 +141,13 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LD3
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Pu
+PB6.GPIO_Pu=GPIO_PULLUP
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Pu
+PB7.GPIO_Pu=GPIO_PULLUP
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
@@ -203,7 +201,8 @@ RCC.HSICECFreq_Value=32786.88524590164
 RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CECFreq_Value,CortexFreq_Value,FamilyName,HSEPLLFreq_Value,HSE_VALUE,HSICECFreq_Value,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLMCOFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIM2Freq_Value,TimSysFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutput2Freq_Value
+RCC.I2c1ClockSelection=RCC_I2C1CLKSOURCE_SYSCLK
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CECFreq_Value,CortexFreq_Value,FamilyName,HSEPLLFreq_Value,HSE_VALUE,HSICECFreq_Value,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2c1ClockSelection,LSI_VALUE,PLLCLKFreq_Value,PLLMCOFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIM2Freq_Value,TimSysFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutput2Freq_Value
 RCC.LSI_VALUE=40000
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=8000000
