--- a/launch_meteo/meteo/meteo.ioc
+++ b/launch_meteo/meteo/meteo.ioc
@@ -55,22 +55,22 @@ Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
 Mcu.Pin1=PA2
-Mcu.Pin10=PA15
-Mcu.Pin11=PB3
+Mcu.Pin10=PB3
+Mcu.Pin11=PB5
 Mcu.Pin12=PB6
 Mcu.Pin13=PB7
 Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin15=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin16=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin17=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin2=PA5
-Mcu.Pin3=PA7
-Mcu.Pin4=PB1
-Mcu.Pin5=PA8
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
+Mcu.Pin2=PB1
+Mcu.Pin3=PA8
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=PA12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PA15
 Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -99,6 +99,10 @@ PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=DISP_CS
 PA10.Locked=true
 PA10.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=LD3
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
 PA13.Locked=true
@@ -119,10 +123,6 @@ PA2.GPIO_Label=VCP_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA5.Mode=TX_Only_Simplex_Unidirect_Master
-PA5.Signal=SPI1_SCK
-PA7.Mode=TX_Only_Simplex_Unidirect_Master
-PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=DISP_DC
 PA8.Locked=true
@@ -137,10 +137,12 @@ PB1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
 PB1.Signal=GPXTI1
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=LD3
 PB3.Locked=true
-PB3.Signal=GPIO_Output
+PB3.Mode=TX_Only_Simplex_Unidirect_Master
+PB3.Signal=SPI1_SCK
+PB5.Locked=true
+PB5.Mode=TX_Only_Simplex_Unidirect_Master
+PB5.Signal=SPI1_MOSI
 PB6.GPIOParameters=GPIO_Pu
 PB6.GPIO_Pu=GPIO_PULLUP
 PB6.Locked=true
